--- a/client/src/component/problemid/problemid.css
+++ b/client/src/component/problemid/problemid.css
@@ -36,14 +36,14 @@
   margin-bottom: 5px;
 }
 
-input[type="text"],
+/* input[type="text"],
 textarea {
   width: 100%;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
+} */
 
 textarea {
   resize: vertical;
