--- a/client/src/component/login/login.css
+++ b/client/src/component/login/login.css
@@ -8,7 +8,7 @@
     justify-content: center;
     height: 90vh;
     /* background: linear-gradient(to right bottom, #0099cc, #33ccff); */
-    background-image: url(../../../Images/LoginImage.jpg);
+    /* background-image: url(../../../Images/LoginImage.jpg); */
   }
   
   .login-container {
